Making functions always take a self arg and fixing optimisations with single file codegen